# iaido

./: .gitignore  .vimspector.json  .ycm_extra_conf.py  Cargo.toml
.github/workflows/: ci.yml
apigen/: Cargo.toml
apigen/src/: direct_fn.rs  lib.rs  methods.rs  ns.rs  ns_impl.rs  ns_rpc.rs  rpc_fn.rs  types.rs
apigen/src/lang/: mod.rs  python.rs
apigen/src/lang/python/: types.rs
apigen/src/ns_rpc/: api.rs  mod.rs  request.rs  response.rs
command_decl/: Cargo.toml
command_decl/src/: args.rs  completers.rs  decl.rs  doc.rs  lib.rs
command_decl/src/parse/: arg.rs  mod.rs
src/: app.rs  cli.rs  demo.rs  log.rs  main.rs
src/app/: bufwin.rs  dispatcher.rs  jobs.rs  looper.rs  mod.rs  popup.rs  prompt.rs  registers.rs  state.rs  widgets.rs  winsbuf.rs
src/app/help/: format.rs  mod.rs  registry.rs
src/app/registers/: blackhole.rs  clipboard.rs  memory.rs
src/connection/: ansi.rs  connections.rs  flags.rs  game.rs  mod.rs  reader.rs  telnet.rs  tls.rs  transport.rs
src/connection/telnet/: echo.rs  handler.rs  handlers.rs  naws.rs  ttype.rs
src/editing/: buffers.rs  gutter.rs  ids.rs  layout.rs  mod.rs  tabpage.rs  tabpages.rs  text.rs  window.rs
src/editing/buffer/: memory.rs  mod.rs  undoable.rs  util.rs
src/editing/change/: handler.rs  manager.rs  mod.rs
src/editing/layout/: conn.rs  linear.rs  mod.rs  win.rs
src/editing/motion/: char.rs  end.rs  find.rs  linewise.rs  mod.rs  repeated.rs  search.rs  util.rs  word.rs
src/editing/object/: mod.rs  pair.rs  util.rs  word.rs
src/editing/source/: mod.rs
src/game/: completion.rs  engine.rs  mod.rs
src/game/completion/: factory.rs  flagged.rs  markov.rs  multiplex.rs  recency.rs  tokens.rs
src/game/completion/multiplex/: weighted.rs  word_index.rs
src/game/processing/: alias.rs  manager.rs  matcher.rs  mod.rs
src/input/: history.rs  keys.rs  mod.rs
src/input/commands/: colors.rs  connection.rs  core.rs  file.rs  help.rs  helpers.rs  log.rs  mapping.rs  mod.rs  registry.rs  script.rs  window.rs
src/input/commands/help/: format.rs
src/input/completion/: args.rs  commands.rs  empty.rs  file.rs  help.rs  impl_macro.rs  mod.rs  state.rs
src/input/maps/: mod.rs  prompt.rs  vim.rs
src/input/maps/actions/: connection.rs
src/input/maps/vim/: cmdline.rs  insert.rs  mod.rs  mode_stack.rs  motion.rs  motions.rs  normal.rs  object.rs  op.rs  prompt.rs  tree.rs  util.rs
src/input/maps/vim/normal/: change.rs  count.rs  registers.rs  scroll.rs  search.rs  window.rs
src/input/source/: memory.rs  mod.rs
src/script/: args.rs  bindings.rs  fns.rs  mod.rs  poly.rs  python.rs
src/script/api/: buffer.rs  connection.rs  core.rs  core2.rs  current.rs  fns.rs  manager.rs  mod.rs  objects.rs  ui.rs  window.rs
src/script/python/: compat.rs  impls.rs  mod.rs  modules.rs  objects.rs  util.rs  wrapper.rs
src/tui/: cursor.rs  events.rs  keys.rs  layout.rs  mod.rs  splash.rs  tabpage.rs  tabpages.rs  window.rs
src/tui/layout/: conn.rs  linear.rs  mod.rs  win.rs
src/tui/measure/: mod.rs
src/tui/rendering/: context.rs  display.rs  mod.rs  size.rs
src/ui/: backtrace.rs  mod.rs  window.rs
