[package]
name = "iaido"
version = "0.1.0"
authors = ["Daniel Leong <me@dhleong.net>"]
edition = "2018"

[features]
default = ["python"]

python = ["rustpython-vm"]

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
# internal crates
command_decl = { path = "./command_decl" }

# for cleaner tests:
indoc = "1.0"

# "ui"
crossterm = { version = "0.19" }
tui = { version = "0.14", default-features = false, features = ["crossterm"] }

# scripting
rustpython-vm = { git = "https://github.com/RustPython/RustPython.git", rev = "3ce476c13d4daa3366e012a96a5e52e271ed2b29", optional = true, features = ["freeze-stdlib"] }

genawaiter = "0.99.1"
telnet = "0.1.4"
url = "2.2.0"
vte = "0.10.0"
tokio = { version = "1.2.0", features = ["full"] }
bitflags = "1.2.1"
delegate = "0.5.1"
backtrace = "0.3.56"
lazy_static = "1.4.0"
bounded-vec-deque = "0.1.1"
dirs = "3.0.1"
