[package]
name = "iaido"
version = "0.1.0"
authors = ["Daniel Leong <me@dhleong.net>"]
edition = "2018"

[features]
# Currently, scripting support is enabled per-language via features. We
# don't enable any by default to improve incremental compile speeds for dev.
# Some anecdotal benches of `touch src/app/registers.rs && cargo build`:
#  - python w/ default macOS linker: ~3.5s
#  -                  python w/ zld: ~2.6s
#  -            no languages w/ zld: ~1.4s
default = []

python = ["rustpython-common", "rustpython-vm", "apigen/python"]

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
# internal crates
command_decl = { path = "./command_decl" }

# NOTE: disable apigen's default features so language support can be toggled
# from the top-level (each language feature above must also enable the same
# feature in apigen)
apigen = { path = "./apigen", default-features = false }

# for cleaner tests:
indoc = "1.0"

# "ui"
crossterm = { version = "0.19" }
tui = { version = "0.14", default-features = false, features = ["crossterm"] }

# "ui"-adjacent: this is used to help colorize help files
pulldown-cmark = { version = "0.8", default-features = false }

# scripting
rustpython-vm = { git = "https://github.com/RustPython/RustPython.git", rev = "3ce476c13d4daa3366e012a96a5e52e271ed2b29", optional = true, features = ["freeze-stdlib"] }
rustpython-common = { git = "https://github.com/RustPython/RustPython.git", rev = "3ce476c13d4daa3366e012a96a5e52e271ed2b29", optional = true }

# etc:
genawaiter = "0.99.1"
telnet = "0.1.4"
url = "2.2.0"
vte = "0.10.0"
tokio = { version = "1.2.0", features = ["rt-multi-thread"] }
bitflags = "1.2.1"
delegate = "0.5.1"
backtrace = "0.3.56"
lazy_static = "1.4.0"
bounded-vec-deque = "0.1.1"
dirs = "3.0.1"
clap = "2.33.3"
arboard = "1.2.1"
